--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,14 @@
                 inicio donde se explican las 
                 cosas increibles que se pueden 
                  hacer con ramas</p>
+                <p>
+                    Los blog son la mejor
+                    forma de compartir
+                    información y tus ideas. 
+                    Mucho más que ir a 
+                    conferencias o salir en
+                    Youtube.     
+                </p>
             </div>
         </div>
     </body>
