--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
         <div id ="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de 
-                confianza</span>
+                <span id="tagline">Tu blog 
+                maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo 
@@ -25,6 +25,7 @@
                     conferencias o salir en
                     Youtube.     
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
