--- a/blogpost.html
+++ b/blogpost.html
@@ -14,9 +14,9 @@
             <div id="post">
                 <h1>Este es el título atractivo 
                 e interesante del post</h1>
-                <p>Y este es el parrafo de 
+                <p>Y este es el párrafo de 
                 inicio donde se explican las 
-                cosas increibles que se pueden 
+                cosas increíbles que se pueden 
                  hacer con ramas</p>
                 <p>
                     Los blog son la mejor
