Agregué una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,7 @@
                     conferencias o salir en
                     Youtube.     
                 </p>
+                <p><img src="css/images/medusa.jpg" width="30%"></p>
                 <p>Suscribete y dale like</p>
             </div>
             <div id="footer">
